[FIX] Double news pagination Github Issue_93, Aligning tags while text is short fix #67 (#74)

--- a/dev/styles/main/plugins/news/news.less
+++ b/dev/styles/main/plugins/news/news.less
@@ -48,7 +48,7 @@
 
 .news .article .news-img-wrap {
     float: left;
-    margin: 3px 12px 5px 0;
+    margin: 3px 12px 11px 0;
     background: #fff;
 }
 
@@ -104,6 +104,10 @@
 .news .no-news-found {
     color: #DB0202;
     font-style: italic;
+}
+
+.news .page-navigation {
+    margin-top: 24px;
 }
 
 .news .page-navigation p {
@@ -334,6 +338,7 @@
     background: none;
     border: none;
     margin-top: 20px;
+    clear: both;
 }
 
 .news-article-footer p > span{
